takmil transition bannerha

--- a/store/index10.html
+++ b/store/index10.html
@@ -1022,9 +1022,9 @@
                         </ul>
                     </div>
                     <div class="col-sm-12  col-xs-12  pull-right">
-
-                        <a href="#"><img class="banner4" src="img/banner4.jpg" /></a>
-
+<div class="banner4">
+                        <a href="#"><img src="img/banner4.jpg" /></a>
+</div>
 
                     </div>
 </div>            
@@ -1366,7 +1366,9 @@
     </div>
 
     <div class=" col-sm-12 col-xs-12">
-        <img alt="image" src="img/banner5.jpg" sizes="240px" />
+        <div class="banner5">
+        <a href="#"><img alt="image" src="img/banner5.jpg" sizes="240px" /></a>
+        </div>
     </div>
 
     <div class=" col-sm-12 col-xs-12 ">
@@ -1587,17 +1589,11 @@
 
                 <div class="left-block">
                     <div class="clear" style="height: 50px"></div>
-<<<<<<< HEAD
-                    <a href="#"><img src="img/banner1.jpg" alt="banner" size="274px" width="285px;" /> </a>
-                    <div class="clear" style="height: 15px"></div>
-                    <a href="#"><img src="img/banner2.jpg" alt="banner" size="274px" width="285px;" /> </a>
-=======
                     <div class="banner1">
                     <a href="#"><img  src="img/banner1.jpg" alt="banner" size="274px" width="285px;" /> </a></div>
                     <div class="clear" style="height: 15px"></div>
                     <div class="banner2">
                     <a href="#"><img  src="img/banner2.jpg" alt="banner" size="274px" width="285px;" /> </a></div>
->>>>>>> parent of 062fd37... Revert "atkmile hover banner"
                 </div>
             </div>
 
