gheimate daily takmil shod

--- a/store/index10.html
+++ b/store/index10.html
@@ -1048,12 +1048,9 @@
     <div class="col-sm-6 col-xs-12">
         <div class="product">
 
-            <a href="#">
                 <div class="grade-wrapper">
                     <img alt="image" src="img/9-80x80.jpg" sizes="80px" />
-
                 </div>
-            </a>
         </div>
     </div>
 
@@ -1646,8 +1643,9 @@
                                 <div class="product-price">
 
                                     <strong> 600.000 تومان</strong>
-                                    </br>
+                                    
                                     <del>700.000</del>
+
 
                                 </div>
 
@@ -1661,6 +1659,24 @@
                                 <p class="col-xs-6 a1" style="padding-top:20px;">موجودی: <b>97</b> </p>
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>33</b> </p>
                             </div>
+                            <div class="clear" style="height: 5px"></div>
+
+                            <div class="row">
+                                <div class="daily">
+<span>258</span>
+<span style="padding: 3% 6%;">0</span>
+<span style="padding: 3% 4%;">49</span>
+<span style="padding: 3% 4%;">12</span>
+</div>
+</div>
+<div class="row">
+    <div class="daily-p">
+<p class="col-xs-3" style="padding-top:10px;">روز</p>
+<p class="col-xs-3" style="padding-top:10px;">ساعت</p>
+<p class="col-xs-3" style="padding-top:10px;">دقیقه</p>
+<p class="col-xs-3" style="padding-top:10px;">ثانیه</p>
+</div>
+</div>
                         </div>
                         <div class="col-sm-3 col-xs-12">
                             <div class="product">
@@ -1688,7 +1704,6 @@
                                 <div class="product-price">
 
                                     <strong>850.000 تومان </strong>
-                                    </br>
                                     <del>900.000</del>
 
 
@@ -1702,6 +1717,25 @@
                                 <p class="col-xs-6 a1" style="padding-top:20px;">موجودی: <b>55</b> </p>
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>2</b> </p>
                             </div>
+                            <div class="clear" style="height: 5px"></div>
+
+                            <div class="row">
+                                <div class="daily">
+<span>258</span>
+<span style="padding: 3% 6%;">0</span>
+<span style="padding: 3% 4%;">49</span>
+<span style="padding: 3% 4%;">12</span>
+</div>
+</div>
+<div class="row">
+    <div class="daily-p">
+<p class="col-xs-3" style="padding-top:10px;">روز</p>
+<p class="col-xs-3" style="padding-top:10px;">ساعت</p>
+<p class="col-xs-3" style="padding-top:10px;">دقیقه</p>
+<p class="col-xs-3" style="padding-top:10px;">ثانیه</p>
+</div>
+</div>
+
                         </div>
 
                         <div class="col-sm-3 col-xs-12">
@@ -1728,7 +1762,6 @@
                                 <div class="product-price">
 
                                     <strong> 600.000 تومان</strong>
-                                    </br>
                                     <del>850.000</del>
 
                                 </div>
@@ -1743,6 +1776,25 @@
                                 <p class="col-xs-6 a1" style="padding-top:20px;">موجودی: <b>97</b> </p>
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>33</b> </p>
                             </div>
+                            <div class="clear" style="height: 5px"></div>
+
+                            <div class="row">
+                                <div class="daily">
+<span>258</span>
+<span style="padding: 3% 6%;">0</span>
+<span style="padding: 3% 4%;">49</span>
+<span style="padding: 3% 4%;">12</span>
+</div>
+</div>
+<div class="row">
+    <div class="daily-p">
+<p class="col-xs-3" style="padding-top:10px;">روز</p>
+<p class="col-xs-3" style="padding-top:10px;">ساعت</p>
+<p class="col-xs-3" style="padding-top:10px;">دقیقه</p>
+<p class="col-xs-3" style="padding-top:10px;">ثانیه</p>
+</div>
+</div>
+
                         </div>
 
                         <div class="col-sm-3 col-xs-12">
@@ -1770,7 +1822,6 @@
                                 <div class="product-price">
 
                                     <strong>700.000 تومان </strong>
-                                    </br>
                                     <del>890.000</del>
 
 
@@ -1784,6 +1835,25 @@
                                 <p class="col-xs-6 a1" style="padding-top:20px;">موجودی: <b>55</b> </p>
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>2</b> </p>
                             </div>
+                            <div class="clear" style="height: 5px"></div>
+
+                            <div class="row">
+                                <div class="daily">
+<span>258</span>
+<span style="padding: 3% 6%;">0</span>
+<span style="padding: 3% 4%;">49</span>
+<span style="padding: 3% 4%;">12</span>
+</div>
+</div>
+<div class="row">
+    <div class="daily-p">
+<p class="col-xs-3" style="padding-top:10px;">روز</p>
+<p class="col-xs-3" style="padding-top:10px;">ساعت</p>
+<p class="col-xs-3" style="padding-top:10px;">دقیقه</p>
+<p class="col-xs-3" style="padding-top:10px;">ثانیه</p>
+</div>
+</div>
+
                         </div>
                         
 
@@ -1812,7 +1882,6 @@
                                 <div class="product-price">
 
                                     <strong> 600.000 تومان</strong>
-                                    </br>
                                     <del>720.000</del>
 
                                 </div>
@@ -1827,6 +1896,25 @@
                                 <p class="col-xs-6 a1" style="padding-top:20px;">موجودی: <b>97</b> </p>
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>33</b> </p>
                             </div>
+                            <div class="clear" style="height: 5px"></div>
+
+                            <div class="row">
+                                <div class="daily">
+<span>258</span>
+<span style="padding: 3% 6%;">0</span>
+<span style="padding: 3% 4%;">49</span>
+<span style="padding: 3% 4%;">12</span>
+</div>
+</div>
+<div class="row">
+    <div class="daily-p">
+<p class="col-xs-3" style="padding-top:10px;">روز</p>
+<p class="col-xs-3" style="padding-top:10px;">ساعت</p>
+<p class="col-xs-3" style="padding-top:10px;">دقیقه</p>
+<p class="col-xs-3" style="padding-top:10px;">ثانیه</p>
+</div>
+</div>
+
                         </div>
 
                         <div class="col-sm-3 col-xs-12">
@@ -1854,7 +1942,6 @@
                                 <div class="product-price">
 
                                     <strong>800.000 تومان </strong>
-                                    </br>
                                     <del>900.000</del>
 
 
@@ -1868,6 +1955,25 @@
                                 <p class="col-xs-6 a1" style="padding-top:20px;">موجودی: <b>55</b> </p>
                                 <p class="col-xs-6 a2" style="padding-top:20px;">فروش: <b>2</b> </p>
                             </div>
+                            <div class="clear" style="height: 5px"></div>
+
+                            <div class="row">
+                                <div class="daily">
+<span>258</span>
+<span style="padding: 3% 6%;">0</span>
+<span style="padding: 3% 4%;">49</span>
+<span style="padding: 3% 4%;">12</span>
+</div>
+</div>
+<div class="row">
+    <div class="daily-p">
+<p class="col-xs-3" style="padding-top:10px;">روز</p>
+<p class="col-xs-3" style="padding-top:10px;">ساعت</p>
+<p class="col-xs-3" style="padding-top:10px;">دقیقه</p>
+<p class="col-xs-3" style="padding-top:10px;">ثانیه</p>
+</div>
+</div>
+
                         </div>
 
                     </div>
@@ -2740,8 +2846,6 @@
         <a class="sticky-mycart" data-target="popup" data-popup="#popup-mycart"><span>کارت</span><i class="fa fa-shopping-cart"></i></a>
         <a class="sticky-myaccount" data-target="popup" data-popup="#popup-myaccount"><span>حساب کاربری</span><i class="fa fa-user"></i></a>
         <a class="sticky-mysearch" data-target="popup" data-popup="#popup-mysearch"><span>جستجو</span><i class="fa fa-search"></i></a>
-        <a class="sticky-recent" data-target="popup" data-popup="#popup-recent"><span>آخرین بازدید </span><i class="fa fa-recent"></i></a>
-        <a class="sticky-backtop" data-target="scroll" data-scroll="html"><span>برو بالا</span><i class="fa fa-angle-double-up"></i></a>
 
 
 
