--- a/store/index10.html
+++ b/store/index10.html
@@ -15,7 +15,7 @@
     <link href="static/bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
     <link href="static/bootstrap/css/bootstrap-rtl.css" rel="stylesheet" />
     <link href="static/fontawesome/css/fontawesome.css" rel="stylesheet" />
-    <link href="style10.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
 
     <link href="static/slick/slick.css" rel="stylesheet" />
     <link href="static/slick/slick-theme.css" rel="stylesheet" />
